@@ -5,6 +5,10 @@ hildon-home (0.3.23~unreleased) unstable; urgency=low
   Adam Endrodi:
   * Fixes: NB#110711, NB#109096 - Blank notifications displayed
 
+  Jan Arne:
+  Fixes: NB#110238 - Let plugins know about notifications of category
+  system.note.*
+
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 16 Apr 2009 13:19:54 +0300
 
 hildon-home (0.3.22) unstable; urgency=low
